--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mapbox-tileserver",
   "version": "1.0.0",
-  "description": "Dynamically generate Mapbox vector tiles from PostGIS data source",
+  "description": "Dynamically generate Mapbox vector tiles from PostGIS using Mapnik Node bindings",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Stuart Phillips",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
     "mapnik": "^3.6.2",
